fix align header

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -33,6 +33,7 @@
     padding: 1rem 15px;
 	z-index: -1;
 	left: 0;
+	align-self: center;
 }
 
 .ms-card {
